# shrimp

./: .gitignore  CMakeLists.txt  Makefile  README.md  meson.build
cmake/: CMakeLists.txt
exemples/: hello.shm
include/: shrimp.h  shrimp_common.h
src/: CMakeLists.txt  shrimp.c
src/io/: CMakeLists.txt  meson.build
src/io/include/: shrimp_io.h
src/io/src/: shrimp_close_file.c  shrimp_open_file.c  shrimp_read_file.c
src/lexer/: CMakeLists.txt  meson.build
src/lexer/include/: shrimp_lexer.h
src/lexer/src/: check_is_id.c  check_is_keyword.c  check_is_literal.c  check_is_operator.c  check_is_symbol.c  create_new_token_node.c  dump_token_delim.c  dump_token_len.c  dump_token_tester.c  dump_token_until.c  get_token_kind_str.c  get_token_type_str.c  push_to_token_list.c  shrimp_init_lexer.c  shrimp_tokenize.c  skip_unwanted.c
src/log/include/: shrimp_log.h
src/log/src/: shrimp_log.c  shrimp_log_debug.c  shrimp_log_fatal.c  shrimp_log_info.c
src/logger/: CMakeLists.txt  meson.build
src/logger/include/: shrimp_logger.h
src/logger/src/: shrimp_log.c  shrimp_log_debug.c  shrimp_log_error.c  shrimp_log_fatal.c  shrimp_log_info.c
src/parser/: CMakeLists.txt  meson.build
src/parser/include/: shrimp_parser.h
src/parser/src/: create_new_top_node.c  expect_token.c  parse_func_params.c  parse_funcdef.c  parse_funcref.c  parse_var_decl.c  parse_var_init.c  shrimp_parse.c
