lexer_src = [
    'src/check_is_id.c',
    'src/check_is_keyword.c',
    'src/check_is_literal.c',
    'src/check_is_operator.c',
    'src/check_is_symbol.c',
    'src/create_new_token_node.c',
    'src/dump_token_delim.c',
    'src/dump_token_len.c',
    'src/dump_token_tester.c',
    'src/get_token_type_str.c',
    'src/push_to_token_list.c',
    'src/shrimp_init_lexer.c',
    'src/shrimp_tokenize.c',
    'src/skip_unwanted.c'
]

lexer = static_library('lexer', lexer_src, include_directories : shrimp_includes)