parser_src = [
    'src/create_new_top_node.c',
    'src/expect_token.c',
    'src/parse_func_params.c',
    'src/parse_funcdef.c',
    'src/parse_funcref.c',
    'src/parse_var_decl.c',
    'src/parse_var_init.c',
    'src/shrimp_parse.c'
]

parser = static_library('parser', parser_src, include_directories : shrimp_includes)